changed port to work with heroku

--- a/client/index.html
+++ b/client/index.html
@@ -73,8 +73,7 @@
 
             $('#hints').change(function(){
                 alert("CHANGED");
-            })
-            // alarmEnd.setAttribute('autoplay', 'autoplay');
+            });            // alarmEnd.setAttribute('autoplay', 'autoplay');
     (function($){
     
         $.extend({
