--- a/client/index.html
+++ b/client/index.html
@@ -109,6 +109,13 @@
             zoom: 1.7;
             -moz-transform: scale(1.7);
         }
+
+        .roomlinks {
+            margin-left: 20px;
+            margin-top: 20px;
+            padding-top: 20px;
+        }
+
 	</style>
 
 </head>
