--- a/client/index.html
+++ b/client/index.html
@@ -5,21 +5,14 @@
 	<title>EskapeRooms Timer</title>
     <link rel="stylesheet" type="text/css" href="style/login.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+	
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
-      <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.min.js"></script>
-      <script type='text/javascript' src="angular/app.js"></script>
-      <script type='text/javascript' src="angular/factories/factory.js"></script>
-      <script type='text/javascript' src="angular/controllers/controller.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.13.1/jquery.validate.min.js"></script>
-    <script type ="text/javascript" src="/socket.io/socket.io.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="bootstrap-player.css">
-    <script src="bootstrap-player.js"></script>
+    <!-- // <script src="bootstrap-player.js"></script> -->
     <link rel="stylesheet" href="flipclock.css">
-    <script type="text/javascript" src="flipclock.js"></script>
+   
 	<style type="text/css">
 		@font-face {
 			font-family: digital;
@@ -89,6 +82,8 @@
             font-size: 400%;
             font-family: Arial;
             margin-top: 0px;
+            border: solid 2px black;
+            overflow: visible;
         }
 
         #audioarea {
@@ -103,7 +98,7 @@
         }
 
 
-        .clock {
+        #apwclock {
             display: inline-block;
             width: auto;
             zoom: 1.7;
@@ -119,15 +114,27 @@
 
 </head>
 <body>
+    
 	<!-- <div class="container"> -->
     <div ng-app="myApp">
         <div ng-view="">
-            <h1>HELLO</h1>
         </div>
     </div>
 
 	<!-- </div> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script type ="text/javascript" src="/socket.io/socket.io.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular-route.min.js"></script>
+      <script type="text/javascript" src="flipclock.js"></script>
+      <script type='text/javascript' src="angular/app.js"></script>
+      <script type='text/javascript' src="angular/factories/factory.js"></script>
+      <script type='text/javascript' src="angular/controllers/controller.js"></script>
+     <!-- // <script type="text/javascript" src="angular-flipclock.js"></script> -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.13.1/jquery.validate.min.js"></script>
     
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
 
 </body>
 </html>
